testdata/golden/sema/valid/pragma_no_std_import_core.fmt
pragma no_std

import core::default;

fn make_default() -> int {
    return default::<int>();
}

fn main() {
    let value = make_default();
    let _ = value;
}
