testdata/golden/sema/invalid/pragma_no_std_missing_core_import.fmt
pragma no_std

fn main() {
    let _ = default::<int>();
}
